************************************************************************
date Version 3.00.31 (Beta 3)
* Fixed FS#149 — "Double question whether you want to save a project on exit."
* Fixed FS#148 — "Different generated C++ and XRC file names for unnamed projects."
* Fixed FS#154 — "Crash when adding a sizer."
* Fixed FS#147 — "Accepting new property values when clicking on a menu/toolbar item."

03-05-2007 Version 3.00.30 (Beta 3)
^ Implemented FS#130 — "Support for searching through XRC or C++ code."

03-04-2007 Version 3.00.29 (Beta 3)
+ FS#146 — "Displaying keyboard shortcuts in toolbar tooltip windows."
+ New keyboard shortcut for 'New Project' Ctrl+N.
^ Updated the keyboard shortcut for 'Save As' from "F3" to "Ctrl-Shift+S".
^ Updated the keyboard shortcut for 'Open' from "F2" to "Ctrl+O".

03-03-2007 Version 3.00.28 (Beta 3)
* Fixed FS#143 — "Silent code generation failure in case of an invalid project path."
   This was a regression in Version 3.00.27.
* Fixed FS#118 — "Code not regenerated on property changes."
* Fixed FS#119 — "Generating files should not force the code display control to scroll back to the top."
* Code in the visible panel is now regenerated on object removal and creation, project load, new project
   and event handler modification.
* Fixed FS#144 - "Incorrectly generated C++ code when precompiled_header
   property was empty."


03-02-2007 Version 3.00.27 (Beta 3)
^ Implemented FS#142 — "set wxStaticline’s default value to wxEXPAND"
^ Implemented FS#140 — "Better code generation selection implementation."
   Always generate code to the visible panel.
   Added -l (language) command line option to specify languages to generate
    when generating from command line. Separate multiple languages with commas.

03-01-2007 Version 3.00.26 (Beta 3)
* Fixed FS#136 — "Panel size doesn't change properly when 'size' is set to -1"
* Fixed FS#137 — "Allow -1 for the 'size' property if the minimum/maximum size is set."